# Eqonomize

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Eqonomize.pro  README.md  TODO  budget.eqz  data.qrc  doc.qrc  eqz_file_format  flags.qrc  icons.qrc  qrc_flags.cpp  translations.qrc  winicon.rc
data/: banner.xcf  currencies.xml  eqonomize.1  eqonomize.desktop  index.theme  io.github.eqonomize.eqonomize.metainfo.xml
doc/: CMakeLists.txt  generatehtml  generatehtml_lang
doc/C/: CMakeLists.txt  index.docbook
doc/en/: CMakeLists.txt  index.docbook
doc/fr/: CMakeLists.txt  index.docbook
doc/html/C/: accounting.html  accounts.html  commands.html  credits.html  currencies.html  faq.html  import_export.html  index.html  introduction.html  loans.html  securities.html  statistics.html  transactions.html  using-eqonomize.html
doc/html/C/figures/: accountview.dia
doc/html/fr/: accounting.html  commands.html  credits.html  faq.html  index.html  introduction.html  using-eqonomize.html
po/: CMakeLists.txt  bg.po  cs.po  de.po  eqonomize.pot  es.po  fr.po  hu.po  it.po  nl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po
snap/: snapcraft.yaml
snap/gui/: eqonomize-hk.desktop  eqonomize.desktop
snap/patches/: snap.patch
src/: CMakeLists.txt  account.cpp  account.h  accountcombobox.cpp  accountcombobox.h  budget.cpp  budget.h  categoriescomparisonchart.cpp  categoriescomparisonchart.h  categoriescomparisonreport.cpp  categoriescomparisonreport.h  currencies.xml.h  currency.cpp  currency.h  currencyconversiondialog.cpp  currencyconversiondialog.h  editaccountdialogs.cpp  editaccountdialogs.h  editcurrencydialog.cpp  editcurrencydialog.h  editscheduledtransactiondialog.cpp  editscheduledtransactiondialog.h  editsplitdialog.cpp  editsplitdialog.h  eqonomize.cpp  eqonomize.desktop  eqonomize.h  eqonomizelist.h  eqonomizemonthselector.cpp  eqonomizemonthselector.h  eqonomizeui.rc  eqonomizevalueedit.cpp  eqonomizevalueedit.h  importcsvdialog.cpp  importcsvdialog.h  kdateedit.cpp  kdateedit.h  kdatepickerpopup.cpp  kdatepickerpopup.h  ledgerdialog.cpp  (+23 more)
translations/: eqonomize_bg.ts  eqonomize_cs.ts  eqonomize_da.ts  eqonomize_de.ts  eqonomize_en.ts  eqonomize_es.ts  eqonomize_fr.ts  eqonomize_hu.ts  eqonomize_it.ts  eqonomize_nl.ts  eqonomize_pt.ts  eqonomize_pt_BR.ts  eqonomize_ro.ts  eqonomize_ru.ts  eqonomize_sk.ts  eqonomize_sv.ts  pt_BR-phrasebook.qph
